setup the css and js files

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Authentication using bcrypt</title>
+    <link rel="stylesheet" href="stylesheets/style.css">
+
+
 </head>
 <body>
+    <div id="main">
+
+    </div>
     
 </body>
 </html>
+
+<script src="javascreepts/script.js"></script>
